[tool.poetry]
name = "poetry init project-2-romanov-m25-555"
version = "0.1.0"
description = ""
authors = ["Mikhail <miroshama@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." },
]

[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"

[tool.poetry.scripts]
database = "src.primitive_db.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []